--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dvoady6dt/image/upload/v1725475038/assets/orange.png"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <script type="module" defer src="/main.js"></script>
+    <title>Juegos Varios</title>
+    <style type="text/css"></style>
   </head>
+
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <main>
+      <div id="contenedor"></div>
+    </main>
+
+    <script src="./node_modules/phaser/dist/phaser.js"></script>
+    <script
+      src="./Componentes/games/theOrangeStar/src/init.js"
+      type="module"
+    ></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script>
   </body>
 </html>
