--- a/index.html
+++ b/index.html
@@ -9,21 +9,13 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" defer src="/main.js"></script>
     <title>Juegos Varios</title>
     <style type="text/css"></style>
   </head>
-
   <body>
-    <main>
-      <div id="contenedor"></div>
-    </main>
-
-    <script src="./node_modules/phaser/dist/phaser.js"></script>
-    <script
-      src="./Componentes/games/theOrangeStar/init.js"
-      type="module"
-    ></script>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script>
+    <div id="contenedor"></div>
+    <script type="module" src="/main.js"></script>
+    <!-- <script src="./node_modules/phaser/dist/phaser.js"></script> -->
+    <!-- <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script> -->
   </body>
 </html>
