--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div id="contenedor"></div>
-    <script type="module" src="/main.js"></script>
-    <!-- <script src="./node_modules/phaser/dist/phaser.js"></script> -->
-    <!-- <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script> -->
+    <script type="module" src="main.js"></script>
+    <!-- <script src="./node_modules/phaser/dist/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script> -->
   </body>
 </html>
