--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Juegos Varios</title>
     <style type="text/css"></style>
+    <script type="module" src="main.js" defer></script>
   </head>
   <body>
     <div id="contenedor"></div>
-    <script type="module" src="main.js"></script>
+
     <!-- <script src="./node_modules/phaser/dist/phaser.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script> -->
   </body>
