--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="contenedor"></div>
 
-    <script src="./node_modules/phaser/dist/phaser.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script>
+    <!-- <script src="./node_modules/phaser/dist/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.51.0/dist/phaser.min.js"></script> -->
   </body>
 </html>
